# miajet

./: .gitignore  .gitmodules  README.md  chroms.sh  environment_debug.yml  job_DP_thymocyte-mm9_50Kb.sbat  job_DP_thymocyte_50Kb.sbat  job_RepliHiC_50Kb.sbat  job_all.sh  job_splenic_B_cell.sbat  pyproject.toml  submit_DP_thymocyte_50Kb.sh  submit_RepliHiC_50Kb.sh  submit_all.sh  submit_all_config.yaml  submit_gs_DP_thymocyte_50Kb.sh  submit_splenic_B_cell.sh
Network_Enhancement/: runner.py
imagej_macros/: curve_tracing_batch.ijm  ridge_detection_batch.ijm
miajet/: __main__.py  analyze_ridges.py  call_imagej.py  cli.py  compute_p_value.py  config.py  expanded_table.py  hic_image.py  overlaps.py  process_imagej.py  rank_ridges.py  stripiness.py  tee.py  threshold_saliency.py
miajet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
notebooks/: combine_results.ipynb  func_analysis.py  func_combine.py  func_iou.py  func_pileup.py  func_plotting.py  miajet_figure1.ipynb  plot_aggregate.ipynb  plot_venn_diagram.ipynb  plot_venn_diagram.py  process_samples.py  run_fontanka.ipynb  run_fun.ipynb  run_sample.sh  submit_analysis_jobs.sh  submit_plot_venn_diagram.sh
scripts/: chipseq.sbat  config.yaml  hic_to_mcool.sh  individual_analysis.sh  individual_fontanka.sh  individual_fun.sh  instructions.txt  job_hic_to_mcool.sh  job_mcool_to_hic.sh  job_pairs_to_mcool.sh  make_1kb_specific.sh  miajet_analysis-data_download.sh  miajet_data_download.sh  miajet_fastq_download.sh  miajet_hic_download.sh  pairs_to_mcool.sh  run_analysis_pipeline.py  run_fontanka_pipeline.py  (+8 more)
(+6 files in other folders)
